--- a/.env
+++ b/.env
@@ -26,6 +26,13 @@ DB_DATABASE=wheels2deals
 DB_USERNAME=root
 DB_PASSWORD=
 
+# DB_CONNECTION=mysql
+# DB_HOST=127.0.0.1
+# DB_PORT=3306
+# DB_DATABASE=u118130549_wheels2deals
+# DB_USERNAME=u118130549_DBwheels2deals
+# DB_PASSWORD=@AUTHWHEELS2deals@.com97416
+
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
