--- a/.env
+++ b/.env
@@ -56,10 +56,10 @@ REDIS_PORT=6379
 MAIL_MAILER=smtp
 MAIL_HOST=smtp.hostinger.com
 MAIL_PORT=465
-MAIL_USERNAME=auth@wheels2deals.com
+MAIL_USERNAME=authentication@wheels2deals.com
 MAIL_PASSWORD=@Wheels2dealsAuth(97)
 MAIL_ENCRYPTION=ssl
-MAIL_FROM_ADDRESS="auth@wheels2deals.com"
+MAIL_FROM_ADDRESS="authentication@wheels2deals.com"
 MAIL_FROM_NAME="Wheels2deals"
 
 AWS_ACCESS_KEY_ID=
