--- a/.env
+++ b/.env
@@ -19,19 +19,19 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=wheels2deals
-DB_USERNAME=root
-DB_PASSWORD=
-
 # DB_CONNECTION=mysql
 # DB_HOST=127.0.0.1
 # DB_PORT=3306
-# DB_DATABASE=u118130549_wheels2deals
-# DB_USERNAME=u118130549_DBwheels2deals
-# DB_PASSWORD=@AUTHWHEELS2deals@.com97416
+# DB_DATABASE=wheels2deals
+# DB_USERNAME=root
+# DB_PASSWORD=
+
+DB_CONNECTION=mysql
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_DATABASE=u118130549_wheels2deals
+DB_USERNAME=u118130549_DBwheels2deals
+DB_PASSWORD=@AUTHWHEELS2deals@.com97416
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
