--- a/.env
+++ b/.env
@@ -53,23 +53,23 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=smtp
-MAIL_HOST=sandbox.smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=3e10ee7d3d1d31
-MAIL_PASSWORD=b25be2a89e6897
-MAIL_ENCRYPTION=tls
-MAIL_FROM_ADDRESS="authentication@wheels2deals.com"
-MAIL_FROM_NAME="Wheels2deals"
-
 # MAIL_MAILER=smtp
-# MAIL_HOST=smtp.hostinger.com
-# MAIL_PORT=465
-# MAIL_USERNAME=authentication@wheels2deals.com
-# MAIL_PASSWORD=@Wheels2dealsAuth(97)
-# MAIL_ENCRYPTION=ssl
+# MAIL_HOST=sandbox.smtp.mailtrap.io
+# MAIL_PORT=2525
+# MAIL_USERNAME=3e10ee7d3d1d31
+# MAIL_PASSWORD=b25be2a89e6897
+# MAIL_ENCRYPTION=tls
 # MAIL_FROM_ADDRESS="authentication@wheels2deals.com"
 # MAIL_FROM_NAME="Wheels2deals"
+
+MAIL_MAILER=smtp
+MAIL_HOST=smtp.hostinger.com
+MAIL_PORT=465
+MAIL_USERNAME=authentication@wheels2deals.com
+MAIL_PASSWORD=@Wheels2dealsAuth(97)
+MAIL_ENCRYPTION=ssl
+MAIL_FROM_ADDRESS="authentication@wheels2deals.com"
+MAIL_FROM_NAME="Wheels2deals"
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
